src/test/ui/block-result/issue-5500.stderr
error[E0308]: mismatched types
  --> $DIR/issue-5500.rs:2:5
   |
LL | fn main() {
   |           - expected `()` because of default return type
LL |     &panic!()
   |     ^^^^^^^^^
   |     |
   |     expected (), found reference
   |     help: consider removing the borrow: `panic!()`
   |
   = note: expected type `()`
              found type `&_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
