src/test/ui/block-result/issue-5500.rs
fn main() {
    &panic!()
    //~^ ERROR mismatched types
    //~| expected type `()`
    //~| found type `&_`
    //~| expected (), found reference
}
